src/objects/Code_Master__c.object
<CustomObject>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsReportColumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReportColumn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snomed_Code__c</fullName>
        <label>Snomed Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Variable_Description__c</fullName>
        <label>Variable Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Code Master</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Code Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>